<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScheduMate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="back">Home</string>
    <string name="event_header">Upcoming Events</string>
    <string name="title_activity_test_database">TestDatabaseActivity</string>
    <string name="addCourseToDB">ADD</string>
    <string name="CourseName">Course Name</string>
    <string name="CourseNumber">Course Number</string>
    <string name="Location">Location</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="title_activity_set_reminder">SetReminderActivity</string>
    <string name="title_activity_display_database">DisplayDatabase</string>
    <string name="display_list">Display Course List</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="title_activity_schedumate_hwdb">SchedumateHWDB</string>
    <string name="title_activity_schedumate_event_db">SchedumateEventDB</string>
    <string name="title_activity_homework_db">HomeworkDBActivity</string>
    <string name="title_activity_event_db">EventDBActivity</string>
    <string name="title_activity_map">MapActivity</string>
	<string name="btn_logout_from_google">Logout G+</string>
</resources>
