<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.schedumate.TestDatabaseActivity" >

	<Button
	    android:id="@+id/addCourseToDB"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentEnd="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="30dp"
	    android:layout_marginEnd="30dp"
	    android:layout_marginTop="14dp"
	    android:onClick="addCourseToDB"
	    android:text="@string/addCourseToDB" />

	<TextView
	    android:id="@+id/CourseName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentStart="true"
	    android:layout_below="@+id/addCourseToDB"
	    android:layout_marginLeft="36dp"
	    android:layout_marginStart="39dp"
	    android:text="@string/CourseName"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/CourseNameEditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/CourseName"
	    android:layout_alignStart="@+id/CourseName"
	    android:inputType="text"
	    android:layout_below="@+id/CourseName"
	    android:ems="10">
		
		 <requestFocus />
	
	</EditText>

	<EditText
	    android:id="@+id/CourseNum"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/CourseNumberEditText"
	    android:layout_alignStart="@+id/CourseNumberEditText"
	    android:layout_below="@+id/CourseNumberEditText"
	    android:inputType="text"
	    android:ems="10" >
	</EditText>

	<TextView
	    android:id="@+id/CourseNumberEditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/CourseNameEditText"
	    android:layout_alignStart="@+id/CourseNameEditText"
	    android:layout_below="@+id/CourseNameEditText"
	    android:layout_marginTop="22dp"
	    android:text="@string/CourseNumber"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/Location"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/CourseNum"
	    android:layout_alignStart="@+id/CourseNum"
	    android:layout_below="@+id/CourseNum"
	    android:layout_marginTop="25dp"
	    android:text="@string/Location"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/LocationEditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Location"
	    android:layout_alignStart="@+id/Location"
	    android:layout_below="@+id/Location"
	    android:inputType="text"
	    android:ems="10" />

	<TextView
	    android:id="@+id/Time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/LocationEditText"
	    android:layout_alignStart="@+id/LocationEditText"
	    android:layout_below="@+id/LocationEditText"
	    android:layout_marginTop="32dp"
	    android:text="@string/time"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/TimeEditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Time"
	    android:layout_alignStart="@+id/Time"
	    android:layout_below="@+id/Time"
	    android:inputType="text"
	    android:ems="10" />
	
</RelativeLayout>
